# controle_de_ruido

./: .gitignore  README.md  distributed_sources.py  lp_media_medicao1.csv  pyproject.toml  simulations.ipynb  transformer_noise_calculator.py
.ipynb_checkpoints/: simulations-checkpoint.ipynb
Treatments/: helmholtz.h5  helmholtz.xlsx  helmoltz_test.h5  helmoltz_test.xlsx  placa_perfurada.h5  placa_perfurada.xlsx  placa_perfurada_1.h5  placa_perfurada_1.xlsx  placa_perfurada_2.h5  placa_perfurada_2.xlsx
distributed_source_data/: elements.txt  nodes.txt  velocidade.txt
