[project]
name = "controle-de-ruido"
version = "0.1.0"
description = "EAC1051"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "mpmath>=1.3.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.29.0",
    "scipy>=1.15.3",
    "tmm",
    "xlsxwriter>=3.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
tmm = { git = "https://github.com/rinaldipp/tmm.git" }
